<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.andrei1058.bedwars</groupId>
    <artifactId>BedWars1058</artifactId>
    <packaging>pom</packaging>
    <version>22.9-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <repositories>
        <!--Bungeecord Repo-->
        <!--Only include if using the Spigot API dependency-->
        <repository>
            <id>bungeecord-repo</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
        <repository>
            <id>gitlab-maven</id>
            <url>https://gitlab.com/api/v4/groups/4800570/-/packages/maven</url>
        </repository>
        <repository>
            <id>vipfeatures-maven</id>
            <url>https://gitlab.com/api/v4/projects/6491858/packages/maven</url>
        </repository>
        <repository>
            <id>codemc-nms</id>
            <url>https://repo.codemc.io/repository/nms/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>net.md-5</groupId>
            <artifactId>bungeecord-chat</artifactId>
            <version>1.8-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.0.1</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ftp</artifactId>
                <version>3.5.3</version>
            </extension>
        </extensions>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <executions>
                    <execution>
                        <id>deploy</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>deploy</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <modules>
        <module>bedwars-plugin</module>
        <module>bedwars-api</module>
        <module>resetadapter_slime</module>
        <module>versionsupport_1_8_R3</module>
        <module>versionsupport_1_12_R1</module>
        <module>versionsupport_common</module>
        <module>versionsupport_v1_16_R3</module>
        <module>versionsupport_v1_17_R1</module>
        <module>versionsupport_v1_18_R2</module>
        <module>versionsupport_v1_19_R2</module>
        <module>versionsupport_v1_19_R3</module>
    </modules>

    <distributionManagement>
        <repository>
            <id>ftp-repo</id>
            <url>ftp://andrei1058.dev/releases</url>
        </repository>
        <snapshotRepository>
            <id>ftp-repo</id>
            <url>ftp://andrei1058.dev/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
</project>
